--- a/css/login.css
+++ b/css/login.css
@@ -223,3 +223,15 @@ h3 a:hover{
         transform: translateY(1em);
     }
 }
+
+.non-visible {
+  display: none;
+}
+.show-password-icon {
+  position: absolute;
+  top: 35%;
+  right: 2em;
+  cursor: pointer;
+  z-index: 1;
+  /* Ensure the icon is above the input */
+}
