--- a/css/home.css
+++ b/css/home.css
@@ -120,6 +120,7 @@ header{
     justify-content: flex-end;
     align-items: center;
     flex-basis: 100%;
+    gap: 1em;
 }
 .options h2 a{
     font-size: 2rem;
@@ -215,6 +216,13 @@ header{
     color: var(--headingcolor);
     font-weight: 700;
 }
+#button-get-started{
+    margin: 0;
+    padding: .8em 1em;
+    text-decoration: none;
+    color: var(--headingcolor);
+    font-weight: 700;
+}
 
 .option-menu-list.active{
     position: relative;
@@ -292,11 +300,6 @@ section{
     .description p{
         font-size: 1em;
     }
-    
-    /* .description{
-        margin-top: 10%;
-        height: 60vh;
-    } */
     .logo .name-log span{
         font-size: 2em;
     }
@@ -325,6 +328,14 @@ section{
     }
     .content-in-about-us ul li{
         font-size: .8rem;
+    }
+
+    .filter h3{
+        display: none;
+    }
+
+    .filter-search{
+        flex-direction: column ;
     }
 }
 
@@ -361,4 +372,140 @@ section{
         right: 5em;
         transform: translateY(10em);
     }
+}
+
+/* search bar css */
+
+.search-form{
+    /* background-color: #d3d3d38c; */
+    padding-top: 1em;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: larger;
+    border-radius: .5em;
+    width: 70dvw;
+    height: fit-content;
+    transition: height 0.4s ease-in-out;
+}
+.search-bar{
+    margin-top: .5em;
+    border-radius: .5em;
+    display: flex;
+    background-color: #fff;
+    width: 40%;
+    padding: .5em;
+}
+form{
+    display: flex;
+    width: 100%;
+    border: none;
+}
+form input{
+    font-size: 1em;
+    border-radius: .3em;
+    width: 100%;
+    border: none;
+    background-color: transparent;
+}
+form button{
+    background-color: transparent;
+    cursor: pointer;
+}
+
+
+input:focus-visible{
+    border: none;
+    outline: none;
+}
+
+.search-bar img{
+    display: flex;
+    width: 23px;
+}
+.search-filter{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .5em;
+}
+
+.filter{
+    background-color: #460d58;
+    color: white;
+    margin-top: 0.8em;
+    padding: 0.7em;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    gap: .6em;
+    transition: background-color 0.4s ease-in-out;
+}
+button{
+    border: none;
+}
+h3{
+    font-weight: 200;
+    font-family: var(--title-font);
+    margin: auto;
+}
+.filter:hover{
+    background-color: rgb(57, 57, 185);
+}
+
+.filter-search{
+    margin: 1em;
+    background-color: var(--body-bgcolor);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: .2em;
+}
+form .filter-search{
+    margin: 0;
+}
+input[type="radio"] {
+    display: none; /* Hide the default radio button */
+}
+
+/* Style radio button labels */
+label {
+    display: inline-block;
+    margin-right: 10px;
+    font-family: var(--heading-font);
+    border-radius: 12px;
+    padding: .5em;
+    cursor: pointer;
+    color: white;
+    background-color: var(--body-bgcolor);
+    transition: background-color 0.4s ease-in-out;
+}
+label:hover{
+    background-color: rgb(57, 57, 185);
+}
+input[type="radio"]:checked + label { 
+    background-color: rgb(57, 57, 185);/* Change the color when selected */
+}
+.filter-search button{
+    background-color: #460d58;
+    font-size: .8em;
+    color: white;
+    padding: .5em;
+    border-radius: 4px;
+    display: flex;
+    align-items: center;
+    gap: .6em;
+    transition: transform 0.4s ease-in-out, background-color 0.4s ease-in-out;
+}
+.filter-search button:hover{
+    transform: scale(1.1);
+
+}
+
+/* hidding the filter option  */
+.filter-search{
+    height: 0;
+    overflow: hidden;
+}
+.filter-search.show-filters{
+    height: fit-content;
+    animation: page-loading 0.8s ease-in-out;
 }
