--- a/css/home.css
+++ b/css/home.css
@@ -48,6 +48,7 @@ p
 }
 a{
     text-decoration: none;
+    color: #fff;
 }
 
 h1
@@ -144,7 +145,7 @@ header{
     border-radius: 50px;
     transition: background-color 0.3s, transform 0.2s, box-shadow 0.3s;
 }
-.login-button a{
+button a{
     display: inline-block;
     font-size: 1em;
     border: none;
@@ -329,14 +330,6 @@ section{
     .content-in-about-us ul li{
         font-size: .8rem;
     }
-
-    .filter h3{
-        display: none;
-    }
-
-    .filter-search{
-        flex-direction: column ;
-    }
 }
 
 @keyframes loadingmenu {
@@ -427,18 +420,6 @@ input:focus-visible{
     justify-content: center;
     gap: .5em;
 }
-
-.filter{
-    background-color: #460d58;
-    color: white;
-    margin-top: 0.8em;
-    padding: 0.7em;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    gap: .6em;
-    transition: background-color 0.4s ease-in-out;
-}
 button{
     border: none;
 }
@@ -447,21 +428,7 @@ h3{
     font-family: var(--title-font);
     margin: auto;
 }
-.filter:hover{
-    background-color: rgb(57, 57, 185);
-}
 
-.filter-search{
-    margin: 1em;
-    background-color: var(--body-bgcolor);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: .2em;
-}
-form .filter-search{
-    margin: 0;
-}
 input[type="radio"] {
     display: none; /* Hide the default radio button */
 }
@@ -484,28 +451,4 @@ label:hover{
 input[type="radio"]:checked + label { 
     background-color: rgb(57, 57, 185);/* Change the color when selected */
 }
-.filter-search button{
-    background-color: #460d58;
-    font-size: .8em;
-    color: white;
-    padding: .5em;
-    border-radius: 4px;
-    display: flex;
-    align-items: center;
-    gap: .6em;
-    transition: transform 0.4s ease-in-out, background-color 0.4s ease-in-out;
-}
-.filter-search button:hover{
-    transform: scale(1.1);
 
-}
-
-/* hidding the filter option  */
-.filter-search{
-    height: 0;
-    overflow: hidden;
-}
-.filter-search.show-filters{
-    height: fit-content;
-    animation: page-loading 0.8s ease-in-out;
-}
